fix: correct collapsing order (found some old design notes)

--- a/packages/webui/src/client/ui/RundownView/RundownHeader/RundownHeader.scss
+++ b/packages/webui/src/client/ui/RundownView/RundownHeader/RundownHeader.scss
@@ -67,7 +67,6 @@
 		height: 100%;
 		width: 100%;
 		display: flex;
-		flex-direction: row-reverse;
 		align-items: center;
 		justify-content: space-between;
 		background: transparent;
@@ -77,7 +76,6 @@
 	}
 
 	.rundown-header__left {
-		order: 3;
 		display: flex;
 		align-items: center;
 		flex: 1 1 0px;
@@ -97,7 +95,6 @@
 	}
 
 	.rundown-header__right {
-		order: 1;
 		display: flex;
 		align-items: center;
 		justify-content: flex-end;
@@ -106,7 +103,6 @@
 	}
 
 	.rundown-header__clocks {
-		order: 2;
 		display: flex;
 		align-items: center;
 		justify-content: center;
